--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <link rel="canonical" href="https://ronaldo.tech/" />
 <meta property="og:url" content="https://ronaldo.tech/" />
 <meta property="og:site_name" content="ronaldo.tech" />
-<meta property="og:image" content="https://ronaldo.tech/images/logo.png" />
+<meta property="og:image" content="https://ronaldo.tech/images/melinda.jpg" />
 <script type="application/ld+json">
-{"description":"O hábito que faz o monge… e todos nós.","url":"https://ronaldo.tech/","@type":"WebSite","headline":"ronaldo.tech","image":"https://ronaldo.tech/images/logo.png","name":"ronaldo.tech","@context":"https://schema.org"}</script>
+{"description":"O hábito que faz o monge… e todos nós.","url":"https://ronaldo.tech/","@type":"WebSite","headline":"ronaldo.tech","image":"https://ronaldo.tech/images/melinda.jpg","name":"ronaldo.tech","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://ronaldo.tech/feed.xml" title="ronaldo.tech" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -98,15 +98,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
-
-<p><img src="/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
-
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
-
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
-
-<h1 id="posts">Posts</h1>
+        <div class="home"><h1 id="posts">Posts</h1>
 
 
 
